# taskman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  adddialog.cpp  adddialog.hpp  addresswidget.cpp  addresswidget.hpp  link  main.cpp  mainwindow.cpp  mainwindow.hpp  newaddresstab.cpp  newaddresstab.hpp  processesWidget.hpp  tablemodel.cpp  tablemodel.hpp
